--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>命理分析服务平台 - 真实API版本</title>
+    <title>润藏八字、八字算命、八字排盘、八字命理、命理分析服务平台</title>
     <style>
         /* 基础样式 */
         * {
@@ -1508,8 +1508,8 @@
     <div id="loading-modal" class="modal">
         <div class="modal-content" style="text-align: center; padding: 40px 25px;">
             <div class="spinner"></div>
-            <div class="loading-text">正在为您进行命理分析，请稍候...</div>
-            <p style="color: #7d6e63; margin-top: 15px; font-size: 14px;">正在调用DeepSeek AI进行深度命理分析，大约需要30-60秒</p>
+            <div class="loading-text">润藏八字团队正在为您进行深度命理分析，请稍候...</div>
+            <p style="color: #7d6e63; margin-top: 15px; font-size: 14px;">大约需要3分钟，不要关闭</p>
         </div>
     </div>
 
@@ -1555,7 +1555,7 @@
 ...继续列出后续大运...
 
 【八字喜用分析】
-用穷通宝鉴、子平真诠、三名通会六十甲子日时断深入分析八字喜用，详细说明喜用神和忌神。
+用穷通宝鉴、子平真诠、三名通会六十甲子日时断深入分析八字喜用。
 
 【性格特点】
 详细解读用户性格特点，包括优点、缺点和个性倾向。
@@ -1576,7 +1576,7 @@
 提供专业的命理建议和发展指导，帮助用户把握未来机遇。
 
 要求：
-1. 回复字数控制在3000-3500字之间
+1. 回复字数控制在2800-3000字之间
 2. 使用纯文本格式，不要使用任何markdown符号
 3. 回复内容要专业、详细但易懂
 4. 分析要直接明了，不要有"首先"、"然后"等过程性词语
@@ -1619,7 +1619,7 @@
 ...继续列出后续大运...
 
 【八字喜用分析】
-用穷通宝鉴、子平真诠、三名通会六十甲子日时断深入分析八字喜用，详细说明喜用神和忌神。
+用穷通宝鉴、子平真诠、三名通会六十甲子日时断深入分析八字喜用。
 
 【性格特点】
 详细解读用户性格特点，包括优点、缺点和个性倾向。
@@ -1646,7 +1646,7 @@
 提醒用户需要注意的重要事项和防范的风险。
 
 要求：
-1. 回复字数控制在3000-3500字之间
+1. 回复字数控制在2800-3200字之间
 2. 使用纯文本格式，不要使用任何markdown符号
 3. 回复内容要专业、详细但易懂
 4. 分析要直接明了，不要有"首先"、"然后"等过程性词语
@@ -1689,7 +1689,7 @@
 ...继续列出后续大运...
 
 【八字喜用分析】
-用穷通宝鉴、子平真诠、三名通会六十甲子日时断深入分析八字喜用，详细说明喜用神和忌神。
+用穷通宝鉴、子平真诠、三名通会六十甲子日时断深入分析八字喜用。
 
 【性格特点】
 详细解读用户性格特点，包括优点、缺点和个性倾向。
@@ -1716,7 +1716,7 @@
 提供个人发展的综合建议，帮助用户把握人生方向。
 
 要求：
-1. 回复字数控制在3500-4000字之间
+1. 回复字数控制在3200-3500字之间
 2. 使用纯文本格式，不要使用任何markdown符号
 3. 回复内容要专业、详细但易懂
 4. 分析要直接明了，不要有"首先"、"然后"等过程性词语
@@ -1779,7 +1779,7 @@
 ...继续列出后续大运...
 
 【八字喜用分析】
-用穷通宝鉴、子平真诠、三名通会六十甲子日时断深入分析八字喜用，详细说明喜用神和忌神。
+用穷通宝鉴、子平真诠、三名通会六十甲子日时断深入分析八字喜用。
 
 【性格特点】
 详细解读用户性格特点，包括优点、缺点和个性倾向。
@@ -1806,7 +1806,7 @@
 提供婚姻生活的具体建议和需要注意的事项。
 
 要求：
-1. 回复字数控制在3500-4000字之间
+1. 回复字数控制在3000-3200字之间
 2. 使用纯文本格式，不要使用任何markdown符号
 3. 回复内容要专业、详细但易懂
 4. 分析要直接明了，不要有"首先"、"然后"等过程性词语
