--- a/index.html
+++ b/index.html
@@ -336,6 +336,6 @@
     </script>
 
     <!-- 模块化JavaScript文件 -->
-    <script src="js/core/main.js" type="module"></script>
+<script src="js/main.js" type="module"></script>
 </body>
 </html>
