--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                 
                 <!-- 八字排盘结果 -->
                 <div class="bazi-pan-card" id="bazi-pan">
-                    <h4>八字排盘结果</h4>
+                    <h4 id="bazi-pan-title">八字排盘结果</h4>
                     <div class="bazi-grid" id="bazi-grid">
                         <!-- 这里将通过JavaScript动态填充 -->
                     </div>
@@ -339,3 +339,4 @@
     <script src="js/core/main.js" type="module"></script>
 </body>
 </html>
+
