--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 
                 <!-- 出生时间组 -->
                 <div class="birth-time-group">
-                    <label class="required">出生时间</label>
+                    <label class="required">出生公历时间</label>
                     <div class="form-row">
                         <div class="form-group">
                             <select id="birth-year">
@@ -141,7 +141,7 @@
                     </div>
                     
                     <div class="birth-time-group">
-                        <label class="required">伴侣出生时间</label>
+                        <label class="required">伴侣出生公历时间</label>
                         <div class="form-row">
                             <div class="form-group">
                                 <select id="partner-birth-year">
@@ -339,3 +339,4 @@
     <script src="js/core/main.js" type="module"></script>
 </body>
 </html>
+
