--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- 新增 Meta Description -->
+    <meta name="description" content="润藏八字提供专业的八字算命、八字排盘、命理分析服务，包括流年运程、人生详批、八字合婚等。免费测算验证，基于传统命理学说为您提供精准分析报告。">
     <title>润藏八字、八字算命、八字排盘、八字命理、命理分析服务平台</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <!-- 新增 H1 标题（隐藏显示，仅用于SEO） -->
+    <h1 style="display: none;">润藏八字命理分析平台</h1>
+    
     <!-- API状态指示器 -->
     <div id="api-status" class="api-status">API状态</div>
     
@@ -339,4 +344,5 @@
     <script src="js/core/main.js" type="module"></script>
 </body>
 </html>
+
 
