--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
     <div id="loading-modal" class="modal">
         <div class="modal-content" style="text-align: center; padding: 40px 25px;">
             <div class="spinner"></div>
-            <div class="loading-text">润藏八字团队正在为您进行深度命理分析，请稍候...</div>
+            <div class="loading-text">润藏八字正在为您进行深度命理分析，请稍候...</div>
             <p style="color: #7d6e63; margin-top: 15px; font-size: 14px;">大约需要3分钟，不要关闭</p>
         </div>
     </div>
@@ -417,6 +417,7 @@ emergencyBtn.addEventListener('click', function() {
 // 页面加载后检查
 window.addEventListener('load', checkEmergency);
 </script>
+
 
 
 
