--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
         <div class="modal-content" style="text-align: center; padding: 40px 25px;">
             <div class="spinner"></div>
             <div class="loading-text">润藏八字正在为您进行深度命理分析，请稍候...</div>
-            <p style="color: #7d6e63; margin-top: 15px; font-size: 14px;">大约需要3分钟，不要关闭</p>
+            <p style="color: #7d6e63; margin-top: 15px; font-size: 14px;">大约需要1-3分钟，不要关闭</p>
         </div>
     </div>
 
@@ -457,6 +457,7 @@ function unlockAllContent() {
 // 页面加载后检查
 window.addEventListener('load', checkEmergency);
 </script>
+
 
 
 
