请求服务器接口，中转请求获取ai查询结果

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
                     
                     <!-- 出生城市 -->
                     <div class="form-group">
-                        <label for="birth-city" class="required">出生城市</label>
-                        <input type="text" id="birth-city" placeholder="请输入出生城市">
-                        <div class="error" id="birth-city-error">请输入出生城市</div>
+                        <label for="birth-city">出生城市</label>
+                        <input type="text" id="birth-city" placeholder="北京" value="">
+                        <div class="error" id="birth-city-error" style="display: none;">请输入出生城市</div>
                     </div>
                 </div>
                 
@@ -104,15 +104,15 @@
                     <div class="form-row">
                         <div class="form-group">
                             <select id="birth-hour">
-                                <option value="">出生时辰</option>
+                                <option value="">出生时辰（选填）</option>
                             </select>
-                            <div class="error" id="birth-hour-error">请选择出生时辰</div>
+                            <div class="error" id="birth-hour-error" style="display: none;">请选择出生时辰</div>
                         </div>
                         <div class="form-group">
                             <select id="birth-minute">
-                                <option value="">出生分钟</option>
+                                <option value="">出生分钟（选填）</option>
                             </select>
-                            <div class="error" id="birth-minute-error">请选择出生分钟</div>
+                            <div class="error" id="birth-minute-error" style="display: none;">请选择出生分钟</div>
                         </div>
                     </div>
                 </div>
