--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
         <div style="margin-top: 20px; padding: 10px; background-color: #fff8e1; border-radius: 6px; font-size: 12px; color: #7d6e63; text-align: left;">
             <p style="margin: 5px 0;"><strong>安全提示：</strong></p>
             <ul style="margin: 5px 0; padding-left: 20px;">
-                <li>支付过程由支付宝官方安全系统保障</li>
+                <li>支付过程由官方安全系统保障</li>
                 <li>本平台不存储您的支付密码等敏感信息</li>
                 <li>支付成功后请及时下载报告，关闭页面后无法找回</li>
                 <li>如有问题，请联系客服微信：runzang888</li>
@@ -340,7 +340,7 @@
         <div class="modal-content" style="text-align: center; padding: 40px 25px;">
             <div class="spinner"></div>
             <div class="loading-text">润藏八字正在为您进行深度命理分析，请稍候...</div>
-            <p style="color: #7d6e63; margin-top: 15px; font-size: 14px;">大约需要3分钟，不要关闭</p>
+            <p style="color: #7d6e63; margin-top: 15px; font-size: 14px;">大约需要1-2分钟，不要关闭</p>
         </div>
     </div>
 
@@ -457,4 +457,5 @@ window.addEventListener('load', checkEmergency);
     <script src="js/core/main.js" type="module"></script>
 </body>
 </html>
+
 
